# umbrella

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  skill.md
examples/curl/: all_endpoints.sh
examples/mcp/: mcp_example.py
examples/openclaw/: umbrella_skill.yaml
examples/python/: basic_usage.py
umbrella/: __init__.py  api.py  cli.py  presets.py  report.py  schemas.py
umbrella/actions/: __init__.py  autotune.py  compress.py  doctor.py  suggest.py  validate.py
umbrella/adapters/: __init__.py  openclaw.py  python_agent.py
umbrella/backends/: __init__.py  base.py  llamacpp_experimental.py  turboquant_pytorch.py
